@@ -236,8 +236,14 @@ track_part(struct modeNode *mn, const char *reason, UNUSED_ARG(void *extra)) {
 static void
 track_kick(struct userNode *kicker, struct userNode *victim, struct chanNode *chan, UNUSED_ARG(void *extra)) {
     if (!track_cfg.enabled) return;
-    if (check_track_kick(track_cfg) && ((check_track_user(kicker->nick) || check_track_user(victim->nick))))
+    if (check_track_kick(track_cfg) && check_track_user(victim->nick))
     {
+           if (kicker) /* net rider kicks dont have a kicker set */
+           {
+               if (!check_track_user(kicker->nick))
+                   return;
+           }
+
            UPDATE_TIMESTAMP();
            TRACK("$bKICK$b %s from %s by %s", victim->nick, chan->name, (kicker ? kicker->nick : "some server"));
     }
